--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,7 +72,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ghcr.io/codeby-devops/app1:${{ github.sha }}
-            ghcr.io/codeby-devops/app2:${{ github.sha }}
-            ghcr.io/codeby-devops/app3:${{ github.sha }}
+          username: ${{ secrets.GITHUB_ACTOR }}
+          password: $ ${{ secrets.GITHUB_TOKEN }}
