--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,14 +67,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          username: ${{ secrets.GITHUB_ACTOR }}
-          password: $ ${{ secrets.GITHUB_TOKEN }}
-          tags: |
-              ghcr.io/yuhi1314/codeby-devops/app1:${{ github.sha }}
-              ghcr.io/yuhi1314/codeby-devops/app2:${{ github.sha }}
-              ghcr.io/yuhi1314/codeby-devops/app3:${{ github.sha }}
+          tags: ghcr.io/Yuhi1314/codeby-devops:latest
