--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,4 +79,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/Yuhi1314/codeby-devops:latest
+          tags: ghcr.io/codeby-devops:latest
