--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          push: true
-          tags: ghcr.io/yuhi1314/codeby_devops:latest
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push Docker image to GitHub Registry
+        run: docker tag my-image:latest ghcr.io/${{ github.repository }}/my-image:latest
+      - run: docker push ghcr.io/${{ github.repository }}/my-image:latest
