--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,6 +74,6 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push Docker image to GitHub Registry
-        run: docker tag my-image:latest ghcr.io/${{ github.repository }}${{ github.sha }}:latest
-      - run: docker push ghcr.io/${{ github.repository }}/${{ github.sha }}:latest
+        run: docker tag my-image:latest ghcr.io/${{ github.repository }}:${{ github.sha }}
+      - run: docker push ghcr.io/${{ github.repository }}/$:{{ github.sha }}
 
