--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,7 +74,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push Docker image to GitHub Registry
-        run: docker tag {{ github.sha }} ghcr.io/${{ github.repository }}/codeby-devops:${{ github.sha }}
+        run: docker tag <commit_sha> ghcr.io/${{ github.repository }}/codeby-devops:${{ github.sha }}
       - run: docker push ghcr.io/${{ github.repository }}/codeby-devops:${{ github.sha }}
 
 
